language/move-lang/tests/move_check/typing/binary_div_invalid.exp
error[E04003]: built-in operation not supported
  ┌─ tests/move_check/typing/binary_div_invalid.move:8:9
  │
8 │         false / true;
  │         ^^^^^
  │         │
  │         Invalid argument to '/'
  │         Found: 'bool'. But expected: 'u8', 'u64', 'u128'

error[E04003]: built-in operation not supported
  ┌─ tests/move_check/typing/binary_div_invalid.move:8:17
  │
8 │         false / true;
  │         -----   ^^^^ Invalid argument to '/'
  │         │        
  │         Found: 'bool'. But expected: 'u8', 'u64', 'u128'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:10:9
   │
10 │         false / 1;
   │         ^^^^^
   │         │
   │         Invalid argument to '/'
   │         Found: 'bool'. But expected: 'u8', 'u64', 'u128'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:10:17
   │
10 │         false / 1;
   │         -----   ^ Invalid argument to '/'
   │         │        
   │         Found: 'bool'. But expected: 'u8', 'u64', 'u128'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:11:9
   │
11 │         @0x0 / @0x1;
   │         ^^^^
   │         │
   │         Invalid argument to '/'
   │         Found: 'address'. But expected: 'u8', 'u64', 'u128'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:11:16
   │
11 │         @0x0 / @0x1;
   │         ----   ^^^^ Invalid argument to '/'
   │         │       
   │         Found: 'address'. But expected: 'u8', 'u64', 'u128'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:13:9
   │
 7 │     fun t0(x: u64, r: R, s: S) {
   │                       - Found: '0x8675309::M::R'. But expected: 'u8', 'u64', 'u128'
   ·
13 │         r / r;
   │         ^ Invalid argument to '/'

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/binary_div_invalid.move:13:9
   │
 3 │     struct R {
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   ·
 7 │     fun t0(x: u64, r: R, s: S) {
   │                       - The type '0x8675309::M::R' does not have the ability 'drop'
   ·
13 │         r / r;
   │         ^^^^^ Cannot ignore values without the 'drop' ability. The value must be used

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:13:13
   │
 7 │     fun t0(x: u64, r: R, s: S) {
   │                       - Found: '0x8675309::M::R'. But expected: 'u8', 'u64', 'u128'
   ·
13 │         r / r;
   │             ^ Invalid argument to '/'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:14:9
   │
 7 │     fun t0(x: u64, r: R, s: S) {
   │                             - Found: '0x8675309::M::S'. But expected: 'u8', 'u64', 'u128'
   ·
14 │         s / s;
   │         ^ Invalid argument to '/'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:14:13
   │
 7 │     fun t0(x: u64, r: R, s: S) {
   │                             - Found: '0x8675309::M::S'. But expected: 'u8', 'u64', 'u128'
   ·
14 │         s / s;
   │             ^ Invalid argument to '/'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:15:9
   │
15 │         1 / false / @0x0 / 0;
   │         ^^^^^^^^^
   │         │   │
   │         │   Found: '_'. But expected: 'u8', 'u64', 'u128'
   │         Invalid argument to '/'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:15:9
   │
15 │         1 / false / @0x0 / 0;
   │         ^^^^^^^^^^^^^^^^
   │         │           │
   │         │           Found: 'address'. But expected: 'u8', 'u64', 'u128'
   │         Invalid argument to '/'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:15:21
   │
15 │         1 / false / @0x0 / 0;
   │             -----   ^^^^ Invalid argument to '/'
   │             │        
   │             Found: '_'. But expected: 'u8', 'u64', 'u128'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:15:28
   │
15 │         1 / false / @0x0 / 0;
   │                     ----   ^ Invalid argument to '/'
   │                     │       
   │                     Found: 'address'. But expected: 'u8', 'u64', 'u128'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:16:9
   │
16 │         () / ();
   │         ^^
   │         │
   │         Invalid argument to '/'
   │         Found: '()'. But expected: 'u8', 'u64', 'u128'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:16:14
   │
16 │         () / ();
   │         --   ^^ Invalid argument to '/'
   │         │     
   │         Found: '()'. But expected: 'u8', 'u64', 'u128'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:18:9
   │
18 │         (0, 1) / (0, 1, 2);
   │         ^^^^^^
   │         │
   │         Invalid argument to '/'
   │         Found: '(u64, u64)'. But expected: 'u8', 'u64', 'u128'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:18:18
   │
18 │         (0, 1) / (0, 1, 2);
   │         ------   ^^^^^^^^^ Invalid argument to '/'
   │         │         
   │         Found: '(u64, u64)'. But expected: 'u8', 'u64', 'u128'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:19:9
   │
19 │         (1, 2) / (0, 1);
   │         ^^^^^^
   │         │
   │         Invalid argument to '/'
   │         Found: '(u64, u64)'. But expected: 'u8', 'u64', 'u128'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_div_invalid.move:19:18
   │
19 │         (1, 2) / (0, 1);
   │         ------   ^^^^^^ Invalid argument to '/'
   │         │         
   │         Found: '(u64, u64)'. But expected: 'u8', 'u64', 'u128'

error: 

   ┌── tests/move_check/typing/binary_div_invalid.move:9:13 ───
   │
 9 │         1 / false;
   │             ^^^^^ Incompatible arguments to '/'
   ·
 9 │         1 / false;
   │         - The type: integer
   ·
 9 │         1 / false;
   │             ----- Is not compatible with: 'bool'
   │

error: 

    ┌── tests/move_check/typing/binary_div_invalid.move:10:17 ───
    │
 10 │         false / 1;
    │                 ^ Incompatible arguments to '/'
    ·
 10 │         false / 1;
    │                 - The type: integer
    ·
 10 │         false / 1;
    │         ----- Is not compatible with: 'bool'
    │

error: 

    ┌── tests/move_check/typing/binary_div_invalid.move:12:19 ───
    │
 12 │         (0: u8) / (1: u128);
    │                   ^^^^^^^^^ Incompatible arguments to '/'
    ·
 12 │         (0: u8) / (1: u128);
    │             -- The type: 'u8'
    ·
 12 │         (0: u8) / (1: u128);
    │                       ---- Is not compatible with: 'u128'
    │

error: 

    ┌── tests/move_check/typing/binary_div_invalid.move:15:13 ───
    │
 15 │         1 / false / @0x0 / 0;
    │             ^^^^^ Incompatible arguments to '/'
    ·
 15 │         1 / false / @0x0 / 0;
    │         - The type: integer
    ·
 15 │         1 / false / @0x0 / 0;
    │             ----- Is not compatible with: 'bool'
    │

error: 

    ┌── tests/move_check/typing/binary_div_invalid.move:15:28 ───
    │
 15 │         1 / false / @0x0 / 0;
    │                            ^ Incompatible arguments to '/'
    ·
 15 │         1 / false / @0x0 / 0;
    │                            - The type: integer
    ·
 15 │         1 / false / @0x0 / 0;
    │                     ---- Is not compatible with: 'address'
    │

error: 

    ┌── tests/move_check/typing/binary_div_invalid.move:17:13 ───
    │
 17 │         1 / ();
    │             ^^ Incompatible arguments to '/'
    ·
 17 │         1 / ();
    │         - The type: integer
    ·
 17 │         1 / ();
    │             -- Is not compatible with: '()'
    │

error: 

    ┌── tests/move_check/typing/binary_div_invalid.move:18:18 ───
    │
 18 │         (0, 1) / (0, 1, 2);
    │                  ^^^^^^^^^ Incompatible arguments to '/'
    ·
 18 │         (0, 1) / (0, 1, 2);
    │         ------ The expression list type of length 2: '({integer}, {integer})'
    ·
 18 │         (0, 1) / (0, 1, 2);
    │                  --------- Is not compatible with the expression list type of length 3: '({integer}, {integer}, {integer})'
    │

